<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>anthony.SuperCraftBrawl</groupId>
	<artifactId>TheArchive-Core</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<relocations>
						<relocation>
							<pattern>fr.mrmicky.fastboard</pattern>
							<!-- Replace with the package of your plugin ! -->
							<shadedPattern>com.yourpackage.fastboard</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>elmmakers</id>
			<url>https://maven.elmakers.com/repository/</url>
		</repository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/content/groups/public/</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- Run the following commands in root: -->
		<!--
			mvn install:install-file -Dfile="lib/spigot-1.8.8.jar" -DgroupId="org.spigotmc" -DartifactId=spigot -Dversion="1.8.8-R0.1-SNAPSHOT" -Dpackaging=jar -B
			mvn install:install-file -Dfile="lib/MinezoneAuth.jar" -DgroupId="me.itzzmic.auth" -DartifactId=SCBAuth -Dversion="1.5" -Dpackaging=jar -B
			mvn install:install-file -Dfile="lib/PunishSystem.jar" -DgroupId="me.itzzmic.minezone" -DartifactId=PunishSystem -Dversion="1.9" -Dpackaging=jar -B
		 -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot</artifactId>
			<version>1.8.8-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.21</version>
		</dependency>
		<dependency>
			<groupId>xyz.xenondevs</groupId>
			<artifactId>particle</artifactId>
			<version>1.7.1</version>
		</dependency>
		<dependency>
			<groupId>fr.minuskube.inv</groupId>
			<artifactId>smart-invs</artifactId>
			<version>1.2.7</version>
		</dependency>
		<dependency>
			<groupId>org.bukkit</groupId>
			<artifactId>bukkit</artifactId>
			<version>1.8.8-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.JitseB.NPCLib</groupId>
			<artifactId>npclib-api</artifactId>
			<version>2.12.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>fr.mrmicky</groupId>
			<artifactId>FastBoard</artifactId>
			<version>1.1.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.comphenix.protocol</groupId>
			<artifactId>ProtocolLib</artifactId>
			<version>4.5.0</version>
		</dependency>
	</dependencies>
</project>